freesia/k8s/apps/prom-stack-v3/prometheus/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-v3-grafana
  namespace: thanos
  labels:
    helm.sh/chart: grafana-6.60.6
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: prometheus-v3
    app.kubernetes.io/version: "10.1.5"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - name: http-web
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: prometheus-v3
