freesia/k8s/apps/prom-stack-v3/prometheus/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-v3-grafana
  namespace: thanos
  labels:
    helm.sh/chart: grafana-6.60.6
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: prometheus-v3
    app.kubernetes.io/version: "10.1.5"
    app.kubernetes.io/managed-by: Helm
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: grafana-v3.harvestasya.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-v3-grafana
                port:
                  number: 80
